Refactor `Commit` to remove `IUtilitiesWrapper` dependency